feat: integrate AI Lecture Room as static sub-app

--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -100,7 +100,7 @@
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
                                 </a>
-                                <a href="day01_ai_concept.html" target="_blank"
+                                <a href="ai-lecture-room/dist/index.html" target="_blank"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
@@ -134,7 +134,7 @@
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
                                 </a>
-                                <a href="day01_ai_caution.html" target="_blank"
+                                <a href="ai-lecture-room/dist/index.html" target="_blank"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-amber-600 text-white text-sm font-bold rounded-lg hover:bg-amber-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
@@ -168,7 +168,7 @@
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
                                 </a>
-                                <a href="day01_ai_trends.html" target="_blank"
+                                <a href="ai-lecture-room/dist/index.html" target="_blank"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
@@ -200,7 +200,7 @@
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
                                 </a>
-                                <a href="day01_ai_ethics.html" target="_blank"
+                                <a href="ai-lecture-room/dist/index.html" target="_blank"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
                                 </a>
