--- a/classroom.html
+++ b/classroom.html
@@ -173,7 +173,10 @@
                                     </div>
                                     <ul class="space-y-3 text-gray-700">
                                         <li class="flex items-start gap-2"><i
-                                                class="fas fa-laptop-code text-emerald-600 mt-1"></i>산업 동향 리서치 보고서 작성
+                                                class="fas fa-laptop-code text-emerald-600 mt-1"></i>
+                                            <a href="day01_practice_report.html"
+                                                class="hover:text-emerald-700 hover:underline transition-colors font-bold">산업
+                                                동향 리서치 보고서 작성</a>
                                         </li>
                                         <li class="flex items-start gap-2"><i
                                                 class="fas fa-laptop-code text-emerald-600 mt-1"></i>PDF 자료로 AI 챗봇 만들기
