Fix practice link in day 1 lecture page

--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -380,7 +380,7 @@
                             <p class="text-slate-500 text-sm mb-6 flex-1">관심 산업 분야의 최신 트렌드를 AI로 조사하고, 경영진에게 보고할
                                 수
                                 있는 형태의 인텔리전스 보고서를 작성합니다.</p>
-                            <a href="#"
+                            <a href="day01_practice_report.html"
                                 class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-emerald-600 hover:text-white transition-colors text-center">
                                 실습 시작하기
                             </a>
