Update chatbot practice link in lecture page

--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -398,7 +398,7 @@
                             <h3 class="text-xl font-bold mb-2">PDF 기반 AI 챗봇 구축</h3>
                             <p class="text-slate-500 text-sm mb-6 flex-1">회사 내부 규정집이나 매뉴얼 PDF를 학습시켜, 임직원이 질문하면 답변해주는
                                 사내 챗봇을 만듭니다.</p>
-                            <a href="#"
+                            <a href="day01_practice_chatbot.html"
                                 class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-emerald-600 hover:text-white transition-colors text-center">
                                 실습 시작하기
                             </a>
