Replace podcast practice with NotebookLM report/slide practice

--- a/day01_lecture.html
+++ b/day01_lecture.html
@@ -405,18 +405,18 @@
                         </div>
                     </div>
 
-                    <!-- 3. 팟캐스트 -->
+                    <!-- 3. NotebookLM 보고서 -->
                     <div
                         class="bg-white p-8 rounded-3xl border border-slate-100 card-shadow hover:border-emerald-200 transition-all group">
                         <div class="flex flex-col h-full">
                             <div
                                 class="w-12 h-12 bg-emerald-50 text-emerald-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-emerald-600 group-hover:text-white transition-colors">
-                                <i class="fas fa-microphone-lines text-xl"></i>
+                                <i class="fas fa-book-open text-xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold mb-2">팟캐스트 스크립트 생성</h3>
-                            <p class="text-slate-500 text-sm mb-6 flex-1">기술 문서를 입력받아 일반인도 이해하기 쉬운 대화형 팟캐스트 스크립트로
-                                자동 변환하는 파이프라인을 구축합니다.</p>
-                            <a href="#"
+                            <h3 class="text-xl font-bold mb-2">NotebookLM 활용 보고서 & 슬라이드 생성</h3>
+                            <p class="text-slate-500 text-sm mb-6 flex-1">내 자료를 기반으로 NotebookLM을 활용해 전문적인 보고서, 인포그래픽,
+                                발표용 슬라이드 핵심 구조를 생성하는 워크플로우를 실습합니다.</p>
+                            <a href="day01_practice_notebooklm.html"
                                 class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-emerald-600 hover:text-white transition-colors text-center">
                                 실습 시작하기
                             </a>
