--- a/day02_lecture.html
+++ b/day02_lecture.html
@@ -135,11 +135,11 @@
                             <i class="fas fa-project-diagram text-2xl"></i>
                         </div>
                         <div class="flex-1">
-                            <h3 class="text-xl font-bold mb-2">GPTs / Projects 활용법</h3>
-                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">나만의 맞춤형 챗봇을 만들고 프로젝트 단위로 대화를 관리하는
-                                노하우를 공유합니다.</p>
+                            <h3 class="text-xl font-bold mb-2">Gems를 통해 개인별 맞춤 AI</h3>
+                            <p class="text-slate-500 text-sm mb-4 leading-relaxed">Gemini의 Gems를 활용하여 나만의 전문가 AI를 구축하고
+                                실무에 최적화된 맞춤형 환경을 조성하는 방법을 배웁니다.</p>
                             <div class="flex gap-2">
-                                <a href="day02_gpts_projects.html"
+                                <a href="day02_gems_ai.html"
                                     class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors"><i
                                         class="fas fa-book-reader"></i> 강의 보기</a>
                                 <a href="#"
@@ -224,14 +224,14 @@
 </body>
 
 </html>
-    <script type="module">
-        import { auth } from './js/firebase-config.js';
-        import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+<script type="module">
+    import { auth } from './js/firebase-config.js';
+    import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-        onAuthStateChanged(auth, (user) => {
-            if (!user) {
-                alert("회원 전용 강의입니다. 로그인 후 이용해주세요.");
-                window.location.href = 'index.html';
-            }
-        });
-    </script>
+    onAuthStateChanged(auth, (user) => {
+        if (!user) {
+            alert("회원 전용 강의입니다. 로그인 후 이용해주세요.");
+            window.location.href = 'index.html';
+        }
+    });
+</script>
