Rename GPTs to Gems in Day 2 Curriculum

--- a/classroom.html
+++ b/classroom.html
@@ -237,11 +237,9 @@
                                             href="day02_role_cot.html"
                                             class="hover:text-blue-600 hover:underline transition-colors">역할 부여 / Chain
                                             of Thought</a></li>
-                                    <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-blue-600 mt-1"></i><a
-                                            href="day02_gpts_projects.html"
-                                            class="hover:text-blue-600 hover:underline transition-colors">GPTs /
-                                            Projects 활용법</a></li>
+                                    <a href="day02_gems_ai.html"
+                                        class="hover:text-blue-600 hover:underline transition-colors">Gems를 통해 개인별 맞춤
+                                        AI</a></li>
                                 </ul>
                             </div>
                             <div class="bg-emerald-50 rounded-2xl p-6">
@@ -255,7 +253,7 @@
                                     <li class="flex items-start gap-2"><i
                                             class="fas fa-laptop-code text-emerald-600 mt-1"></i>업무 자동화 프롬프트 템플릿 작성</li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>나만의 커스텀 GPT 만들기</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>나만의 커스텀 Gem 만들기</li>
                                     <li class="flex items-start gap-2"><i
                                             class="fas fa-laptop-code text-emerald-600 mt-1"></i>Claude로 장문 보고서 분석하기
                                     </li>
