--- a/classroom.html
+++ b/classroom.html
@@ -253,7 +253,7 @@
                                     <li class="flex items-start gap-2"><i
                                             class="fas fa-laptop-code text-emerald-600 mt-1"></i>업무 자동화 프롬프트 템플릿 작성</li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>나만의 커스텀 Gem 만들기</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>나만의 비서 Gems 만들기</li>
                                     <li class="flex items-start gap-2"><i
                                             class="fas fa-laptop-code text-emerald-600 mt-1"></i>Claude로 장문 보고서 분석하기
                                     </li>
