--- a/day02_lecture.html
+++ b/day02_lecture.html
@@ -184,11 +184,11 @@
                             class="w-12 h-12 bg-teal-50 text-teal-600 rounded-2xl flex items-center justify-center mb-6 group-hover:bg-teal-600 group-hover:text-white transition-colors">
                             <i class="fas fa-robot text-xl"></i>
                         </div>
-                        <h3 class="text-xl font-bold mb-2">나만의 커스텀 Gem</h3>
-                        <p class="text-slate-500 text-sm mb-6 flex-1">특정 목적(예: 업무 자동화, 전문 코칭)을 수행하는 나만의 Gem을 직접 제작하고 실무에
-                            활용합니다.
+                        <h3 class="text-xl font-bold mb-2">나만의 비서 Gems</h3>
+                        <p class="text-slate-500 text-sm mb-6 flex-1">반복되는 업무를 대신 처리하고 일정을 관리해주는 나만의 AI 비서를 Gems로 구축하는
+                            방법을 실습합니다.
                         </p>
-                        <a href="#"
+                        <a href="day02_practice_gems.html"
                             class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
                             시작하기</a>
                     </div>
