Complete Day 2 practice sub-pages and linking

--- a/day02_lecture.html
+++ b/day02_lecture.html
@@ -171,7 +171,7 @@
                         <h3 class="text-xl font-bold mb-2">업무 자동화 템플릿</h3>
                         <p class="text-slate-500 text-sm mb-6 flex-1">반복되는 이메일 작성, 회의록 요약 등을 위한 재사용 가능한 프롬프트 템플릿을 만듭니다.
                         </p>
-                        <a href="#"
+                        <a href="day02_practice_automation.html"
                             class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
                             시작하기</a>
                     </div>
@@ -204,7 +204,7 @@
                         <h3 class="text-xl font-bold mb-2">Claude로 보고서 분석</h3>
                         <p class="text-slate-500 text-sm mb-6 flex-1">Claude의 긴 컨텍스트 윈도우를 사용하여 방대한 양의 문서를 분석하고 인사이트를
                             도출합니다.</p>
-                        <a href="#"
+                        <a href="day02_practice_claude.html"
                             class="w-full py-3 bg-slate-50 text-slate-700 font-bold rounded-xl hover:bg-teal-600 hover:text-white transition-colors text-center">실습
                             시작하기</a>
                     </div>
