--- a/classroom.html
+++ b/classroom.html
@@ -251,11 +251,17 @@
                                 </div>
                                 <ul class="space-y-3 text-gray-700">
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>업무 자동화 프롬프트 템플릿 작성</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day02_practice_automation.html" class="hover:underline">업무 자동화 프롬프트
+                                            템플릿 작성</a></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>나만의 비서 Gems 만들기</li>
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day02_practice_gems.html" class="hover:underline">나만의 비서 Gems 만들기</a>
+                                    </li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i>Claude로 장문 보고서 분석하기
+                                            class="fas fa-laptop-code text-emerald-600 mt-1"></i><a
+                                            href="day02_practice_claude.html" class="hover:underline">Claude로 장문 보고서
+                                            분석하기</a>
                                     </li>
                                 </ul>
                             </div>
